# synprivutil

./: .gitignore  README.md  pyproject.toml
datasets/: README.md
examples/: dataset_transform_normalization.py  plots.py  privacy_attacks.py  privacy_distance.py  synthetic_data_generation.py  train_test.py  unswnb15_gaussian_copula_privacy.ipynb  utility.py
src/privacy_utility_framework/: cyberdata.py
src/privacy_utility_framework/dataset/: __init__.py  dataset.py  hypertransformer.py  tabletransformer.py  transformers.py
src/privacy_utility_framework/metrics/privacy/: __init__.py  privacy_metric_manager.py
src/privacy_utility_framework/metrics/privacy_metrics/: __init__.py  privacy_metric_calculator.py  privacy_metric_manager.py
src/privacy_utility_framework/metrics/utility/: __init__.py  utility_metric_calculator.py  utility_metric_manager.py
src/privacy_utility_framework/metrics/utility_metrics/: __init__.py  utility_metric_calculator.py  utility_metric_manager.py
src/privacy_utility_framework/plots/: plots.py
src/privacy_utility_framework/synthesizers/: __init__.py  core.py  sdv.py  synthesizers.py
src/privacy_utility_framework/utils/: __init__.py  distance.py  distance.py.old  utils.py
tests/: test_cyberdata.py  test_unit_adversarial_accuracy.py  test_unit_custom_transformers.py  test_unit_dataset_transform.py  test_unit_dataset_transform_roundtrip.py  test_unit_distance_strategies.py  test_unit_ecdf_transformer.py  test_unit_privacy_metric_calculator.py  test_unit_quantile_transformer.py  test_unit_util_distances.py
(+35 files in other folders)
